# professor-research-profiler

./: .env.example  LICENSE  README.md  app.py  db.py  get-author-information.py  profiler.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6b5e3b62db5d_actually_drop_analyses_unique_constraint.py  78afb7c7597b_add_password_hash_to_users.py  8e5b0e85e15f_add_create_time_update_time.py  b2f3c913aa05_remove_uniqueconstraint_in_analysis.py
backend/app/: crud.py  main.py  models.py  schemas.py
backend/app/api/: analyze.py  history.py  professors.py  users.py
backend/app/core/: analysis_job.py  config.py  database.py  rate_limit.py  redis.py  security.py
backend/app/services/: llm_router.py  run_analysis.py  semantic_scholar.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: ErrorMessage.tsx  Layout.tsx  Spinner.tsx
frontend/src/context/: UserContext.tsx
frontend/src/pages/: HistoryPage.tsx  LoginPage.tsx  ResultsPage.tsx  SearchPage.tsx
