[project]
name = "professor-research-profiler"
version = "0.1.0"
description = "Evaluate a professor's research profile and fit for PhD applicants using Semantic Scholar and LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "sqlalchemy-libsql>=0.1",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "openai>=2.0",
    "anthropic>=0.105",
    "google-genai>=1.0",
    "alembic>=1.18.5",
    "redis>=8.0.1",
    "bcrypt>=4.1,<5",
    "pyjwt>=2.9,<3",
]
